ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/no_bucket_name.stderr
error: bucket needs a name
 --> tests/fails/no_bucket_name.rs:5:9
  |
5 |         bucket
  |         ^^^^^^
